src/Grammar/gen/SearchGrammarParser.java
// Generated from C:/Users/Amani Louendriz/Projects/TestingSEG3103/TypeAndSearch/src/Grammar\SearchGrammar.g4 by ANTLR 4.12.0
package Grammar.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SearchGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, NBRE=17, 
		UPPERLETTER=18, LOWERLETTER=19, DIGIT=20, LETTER=21, WS=22;
	public static final int
		RULE_program = 0, RULE_query = 1, RULE_place = 2, RULE_oneWord = 3, RULE_multiWord = 4, 
		RULE_withStreetAddress = 5, RULE_cardinal = 6, RULE_province = 7, RULE_checkIn = 8, 
		RULE_checkOut = 9, RULE_nbreGuests = 10, RULE_adult = 11, RULE_children = 12, 
		RULE_infant = 13, RULE_pet = 14, RULE_month = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "query", "place", "oneWord", "multiWord", "withStreetAddress", 
			"cardinal", "province", "checkIn", "checkOut", "nbreGuests", "adult", 
			"children", "infant", "pet", "month"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'th'", "'st'", "'rd'", "'nd'", "'.'", "'1'", "'2'", "'3'", 
			"'4'", "'5'", "'Aug'", "'Sep'", "'Oct'", "'Nov'", "'Dec'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "NBRE", "UPPERLETTER", "LOWERLETTER", "DIGIT", 
			"LETTER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SearchGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SearchGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SearchGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SearchGrammarParser.WS, i);
		}
		public CheckInContext checkIn() {
			return getRuleContext(CheckInContext.class,0);
		}
		public CheckOutContext checkOut() {
			return getRuleContext(CheckOutContext.class,0);
		}
		public NbreGuestsContext nbreGuests() {
			return getRuleContext(NbreGuestsContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			place();
			setState(35);
			match(WS);
			setState(36);
			checkIn();
			setState(37);
			match(WS);
			setState(38);
			checkOut();
			setState(39);
			match(WS);
			setState(40);
			nbreGuests();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlaceContext extends ParserRuleContext {
		public OneWordContext oneWord() {
			return getRuleContext(OneWordContext.class,0);
		}
		public MultiWordContext multiWord() {
			return getRuleContext(MultiWordContext.class,0);
		}
		public WithStreetAddressContext withStreetAddress() {
			return getRuleContext(WithStreetAddressContext.class,0);
		}
		public PlaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_place; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterPlace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitPlace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitPlace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlaceContext place() throws RecognitionException {
		PlaceContext _localctx = new PlaceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_place);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				oneWord();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				multiWord();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				withStreetAddress();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneWordContext extends ParserRuleContext {
		public List<TerminalNode> UPPERLETTER() { return getTokens(SearchGrammarParser.UPPERLETTER); }
		public TerminalNode UPPERLETTER(int i) {
			return getToken(SearchGrammarParser.UPPERLETTER, i);
		}
		public List<TerminalNode> LOWERLETTER() { return getTokens(SearchGrammarParser.LOWERLETTER); }
		public TerminalNode LOWERLETTER(int i) {
			return getToken(SearchGrammarParser.LOWERLETTER, i);
		}
		public OneWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterOneWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitOneWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitOneWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneWordContext oneWord() throws RecognitionException {
		OneWordContext _localctx = new OneWordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_oneWord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(UPPERLETTER);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UPPERLETTER || _la==LOWERLETTER) {
				{
				{
				setState(48);
				_la = _input.LA(1);
				if ( !(_la==UPPERLETTER || _la==LOWERLETTER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiWordContext extends ParserRuleContext {
		public List<OneWordContext> oneWord() {
			return getRuleContexts(OneWordContext.class);
		}
		public OneWordContext oneWord(int i) {
			return getRuleContext(OneWordContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(SearchGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SearchGrammarParser.WS, i);
		}
		public MultiWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterMultiWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitMultiWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitMultiWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiWordContext multiWord() throws RecognitionException {
		MultiWordContext _localctx = new MultiWordContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multiWord);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			oneWord();
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55);
					match(WS);
					setState(56);
					oneWord();
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithStreetAddressContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(SearchGrammarParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(SearchGrammarParser.DIGIT, i);
		}
		public CardinalContext cardinal() {
			return getRuleContext(CardinalContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SearchGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SearchGrammarParser.WS, i);
		}
		public List<OneWordContext> oneWord() {
			return getRuleContexts(OneWordContext.class);
		}
		public OneWordContext oneWord(int i) {
			return getRuleContext(OneWordContext.class,i);
		}
		public ProvinceContext province() {
			return getRuleContext(ProvinceContext.class,0);
		}
		public List<TerminalNode> UPPERLETTER() { return getTokens(SearchGrammarParser.UPPERLETTER); }
		public TerminalNode UPPERLETTER(int i) {
			return getToken(SearchGrammarParser.UPPERLETTER, i);
		}
		public List<TerminalNode> LOWERLETTER() { return getTokens(SearchGrammarParser.LOWERLETTER); }
		public TerminalNode LOWERLETTER(int i) {
			return getToken(SearchGrammarParser.LOWERLETTER, i);
		}
		public WithStreetAddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withStreetAddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterWithStreetAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitWithStreetAddress(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitWithStreetAddress(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithStreetAddressContext withStreetAddress() throws RecognitionException {
		WithStreetAddressContext _localctx = new WithStreetAddressContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_withStreetAddress);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(DIGIT);
			setState(63);
			match(DIGIT);
			setState(64);
			cardinal();
			setState(65);
			match(WS);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				{
				setState(66);
				match(UPPERLETTER);
				setState(67);
				match(LOWERLETTER);
				}
				setState(69);
				match(WS);
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==UPPERLETTER );
			setState(74);
			match(T__0);
			setState(75);
			oneWord();
			setState(76);
			match(T__0);
			setState(77);
			province();
			setState(78);
			match(WS);
			setState(79);
			oneWord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CardinalContext extends ParserRuleContext {
		public CardinalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cardinal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterCardinal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitCardinal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitCardinal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CardinalContext cardinal() throws RecognitionException {
		CardinalContext _localctx = new CardinalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cardinal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 60L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProvinceContext extends ParserRuleContext {
		public List<TerminalNode> UPPERLETTER() { return getTokens(SearchGrammarParser.UPPERLETTER); }
		public TerminalNode UPPERLETTER(int i) {
			return getToken(SearchGrammarParser.UPPERLETTER, i);
		}
		public ProvinceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_province; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterProvince(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitProvince(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitProvince(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProvinceContext province() throws RecognitionException {
		ProvinceContext _localctx = new ProvinceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_province);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(UPPERLETTER);
			setState(84);
			match(UPPERLETTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CheckInContext extends ParserRuleContext {
		public MonthContext month() {
			return getRuleContext(MonthContext.class,0);
		}
		public List<TerminalNode> DIGIT() { return getTokens(SearchGrammarParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(SearchGrammarParser.DIGIT, i);
		}
		public CheckInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checkIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterCheckIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitCheckIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitCheckIn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CheckInContext checkIn() throws RecognitionException {
		CheckInContext _localctx = new CheckInContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_checkIn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			month();
			setState(87);
			match(T__5);
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(88);
				match(DIGIT);
				}
				break;
			case 2:
				{
				setState(89);
				match(DIGIT);
				setState(90);
				match(DIGIT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CheckOutContext extends ParserRuleContext {
		public MonthContext month() {
			return getRuleContext(MonthContext.class,0);
		}
		public List<TerminalNode> DIGIT() { return getTokens(SearchGrammarParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(SearchGrammarParser.DIGIT, i);
		}
		public CheckOutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checkOut; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterCheckOut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitCheckOut(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitCheckOut(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CheckOutContext checkOut() throws RecognitionException {
		CheckOutContext _localctx = new CheckOutContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_checkOut);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			month();
			setState(94);
			match(T__5);
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(95);
				match(DIGIT);
				}
				break;
			case 2:
				{
				setState(96);
				match(DIGIT);
				setState(97);
				match(DIGIT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NbreGuestsContext extends ParserRuleContext {
		public AdultContext adult() {
			return getRuleContext(AdultContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SearchGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SearchGrammarParser.WS, i);
		}
		public ChildrenContext children() {
			return getRuleContext(ChildrenContext.class,0);
		}
		public InfantContext infant() {
			return getRuleContext(InfantContext.class,0);
		}
		public PetContext pet() {
			return getRuleContext(PetContext.class,0);
		}
		public NbreGuestsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nbreGuests; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterNbreGuests(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitNbreGuests(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitNbreGuests(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NbreGuestsContext nbreGuests() throws RecognitionException {
		NbreGuestsContext _localctx = new NbreGuestsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nbreGuests);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			adult();
			setState(101);
			match(WS);
			setState(102);
			children();
			setState(103);
			match(WS);
			setState(104);
			infant();
			setState(105);
			match(WS);
			setState(106);
			pet();
			setState(107);
			match(WS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdultContext extends ParserRuleContext {
		public TerminalNode NBRE() { return getToken(SearchGrammarParser.NBRE, 0); }
		public AdultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adult; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterAdult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitAdult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitAdult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdultContext adult() throws RecognitionException {
		AdultContext _localctx = new AdultContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_adult);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(NBRE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChildrenContext extends ParserRuleContext {
		public TerminalNode NBRE() { return getToken(SearchGrammarParser.NBRE, 0); }
		public ChildrenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_children; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterChildren(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitChildren(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitChildren(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChildrenContext children() throws RecognitionException {
		ChildrenContext _localctx = new ChildrenContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_children);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(NBRE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfantContext extends ParserRuleContext {
		public InfantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).enterInfant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SearchGrammarListener ) ((SearchGrammarListener)listener).exitInfant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SearchGrammarVisitor ) return ((SearchGrammarVisitor<? extends T>)visitor).visitInfant(this);
			else return visitor.visitChildren(this);
		}
	}
